--- a/src/main/resources/templates/customer/customer.html
+++ b/src/main/resources/templates/customer/customer.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en" xmlns:th="http://www.thymeleaf.org">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <head>
 
           <style>
@@ -52,12 +55,7 @@
             <div class="col-12 d-flex no-block align-items-center">
                 <div class="ms-auto text-end">
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/customer">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">
-                                Library
-                            </li>
-                        </ol>
+                        <a href="/customer/home"> <i class="fa fa-home"></i> Home</a>
                     </nav>
                 </div>
             </div>
