--- a/src/main/resources/templates/customer/info.html
+++ b/src/main/resources/templates/customer/info.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en" xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <head>
 
     <style>
@@ -42,7 +46,7 @@
         }
     </style>
 
-    <script language="javascript" src="export.js"> </script>
+    <script language="javascript" src="../setting.js"> </script>
 </head>
 
 <body th:fragment="main">
@@ -52,12 +56,9 @@
             <div class="col-12 d-flex no-block align-items-center">
                 <div class="ms-auto text-end">
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/customer">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">
-                                Library
-                            </li>
-                        </ol>
+                        <nav aria-label="breadcrumb">
+                            <a href="/customer/home"> <i class="fa fa-home"></i> Home</a>
+                        </nav>
                     </nav>
                 </div>
             </div>
