--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Cấu hình</a>
+                <a class="nav-link" href="/customer/setting">Cấu hình</a>
             </li>
         </ul>
     </div>
