--- a/src/main/resources/templates/customer/info.html
+++ b/src/main/resources/templates/customer/info.html
@@ -74,6 +74,9 @@
                             <button class="button button2">
                                 <a th:href="@{/api/pdf/exportIf(id=*{id})}">Export</a>
                             </button>
+                            <button class="button button2">
+                                <a>Them moi khach hang</a>
+                            </button>
                             <table id="customers">
                                 <thead>
                                 <tr>
